--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button class="nav-btn" data-subject="tax">الضريبة</button>
             <button class="nav-btn" data-subject="terms">المصطلحات</button>
             <button class="nav-btn" data-subject="principles">اصول الفقه</button>
-            <button class="nav-btn" data-subject="arbitration">التحكيم الداخلى و الدولى</button>
+            <button class="nav-btn" data-subject="arbitration">حماية البيئة</button>
             <button class="nav-btn" data-subject="aviation">البحرى و الجوى</button>
         </div>
     </nav>
