--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                 <div class="subject-section" data-subject="arbitration">
                     <div class="input-group">
-                        <input type="text" class="note-input" data-subject="arbitration" placeholder="أدخل ملاحظة التحكيم...">
+                        <input type="text" class="note-input" data-subject="arbitration" placeholder="أدخل ملاحظة حماية البيئة...">
                         <input type="number" class="number-input" placeholder="#">
                         <textarea class="description-input" placeholder="الوصف (اختياري)..."></textarea>
                         <div class="priority-buttons">
