--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button class="nav-btn" data-subject="principles">اصول الفقه</button>
             <button class="nav-btn" data-subject="arbitration">حماية البيئة</button>
             <button class="nav-btn" data-subject="aviation">البحرى و الجوى</button>
-        </div>
+            <a href="https://4k3wuu7xmn3jsg1qwwzvwa-preview.magicpatterns.app"><button class="nav-btn" data-subject="Flashcard">FlashCards</button></a>        </div>
     </nav>
 
     <div class="app-container">
